--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 	<ul>
-		<li>Vagrant</li>
-		<li>Docker</li>
-		<li>Ansible</li>
-		<li>Integração Contínua</li>
+		<li>1 Vagrant</li>
+		<li>2 Docker</li>
+		<li>3 Ansible</li>
+		<li>4 Integração Contínua</li>
 	</ul>
 </body>
 </html>
